--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,5 +57,6 @@
     "Temp/": true
   },
   "dotnet.defaultSolution": "2D-Flipside.sln",
-  "cSpell.words": ["Behaviour", "mvnt", "Rigidbody"]
+  "cSpell.words": ["Behaviour", "Mathf", "mvnt", "Rigidbody"],
+  "dotnet.preferCSharpExtension": true
 }
